packages/core/src/dropdown/Dropdown.css
.saltDropdown {
  all: unset;
  box-sizing: border-box;
  min-width: 4em;
  width: 100%;
  background: var(--dropdown-background);
  cursor: var(--dropdown-cursor);
  min-height: var(--salt-size-base);
  border: var(--dropdown-border);
  border-radius: var(--salt-palette-corner-weak, 0);
  display: inline-flex;
  align-items: center;
  padding: 0 var(--salt-spacing-100);
  gap: var(--salt-spacing-100);
  color: var(--dropdown-color);
  font-family: var(--salt-text-fontFamily);
  font-size: var(--salt-text-fontSize);
  font-weight: var(--salt-text-fontWeight);
  line-height: var(--salt-text-lineHeight);
  letter-spacing: var(--salt-text-letterSpacing);
  position: relative;
  overflow: hidden;
}

.saltDropdown:hover {
  background: var(--saltDropdown-background-hover, var(--dropdown-background-hover));
  cursor: var(--salt-selectable-cursor-hover);
}

.saltDropdown-bordered.saltDropdown {
  border: var(--salt-size-border) var(--salt-editable-borderStyle) var(--dropdown-borderColor);
}

.saltDropdown-bordered.saltDropdown:hover {
  border-style: var(--salt-editable-borderStyle-hover);
  border-color: var(--dropdown-borderColor-hover);
}

/* Style applied if focused or active when `bordered={true}` */
.saltDropdown-bordered.saltDropdown:focus,
.saltDropdown-bordered.saltDropdown:focus:hover {
  border-style: var(--salt-editable-borderStyle-active);
  border-color: var(--dropdown-borderColor-active);
}

/* Styling when focused if `disabled={true}` or `readOnly={true}` when `bordered={true}` */
.saltDropdown-bordered.saltDropdown[aria-readonly="true"],
.saltDropdown-bordered.saltDropdown[aria-readonly="true"]:hover {
  border-style: var(--salt-editable-borderStyle-readonly);
  border-color: var(--salt-editable-borderColor-readonly);
}

.saltDropdown-bordered.saltDropdown-disabled,
.saltDropdown-bordered.saltDropdown-disabled:hover {
  border-style: var(--salt-editable-borderStyle-disabled);
  border-color: var(--salt-editable-borderColor-disabled);
}

.saltDropdown-activationIndicator {
  left: 0;
  bottom: 0;
  width: 100%;
  position: absolute;
  border-bottom: var(--salt-size-border) var(--salt-editable-borderStyle) var(--dropdown-borderColor);
}

.saltDropdown:hover .saltDropdown-activationIndicator {
  border-bottom-style: var(--salt-editable-borderStyle-hover);
  border-bottom-color: var(--dropdown-borderColor-hover);
}

.saltDropdown:focus .saltDropdown-activationIndicator,
.saltDropdown:focus:hover .saltDropdown-activationIndicator {
  border-bottom: var(--salt-size-border-strong) var(--salt-editable-borderStyle-active) var(--dropdown-borderColor-active);
}

.saltDropdown[aria-readonly="true"] .saltDropdown-activationIndicator,
.saltDropdown[aria-readonly="true"]:hover .saltDropdown-activationIndicator {
  border-bottom-style: var(--salt-editable-borderStyle-readonly);
  border-bottom-color: var(--salt-editable-borderColor-readonly);
}

.saltDropdown-disabled .saltDropdown-activationIndicator,
.saltDropdown-disabled:hover .saltDropdown-activationIndicator {
  border-bottom-style: var(--salt-editable-borderStyle-disabled);
  border-bottom-color: var(--salt-editable-borderColor-disabled);
}

.saltDropdown-bordered .saltDropdown-activationIndicator,
.saltDropdown-bordered.saltDropdown[aria-readonly="true"] .saltDropdown-activationIndicator,
.saltDropdown-bordered.saltDropdown-disabled:hover .saltDropdown-activationIndicator {
  border-bottom-width: 0;
}

.saltDropdown-bordered.saltDropdown:focus .saltDropdown-activationIndicator {
  border-bottom-width: calc(var(--salt-size-border-strong) - var(--salt-size-border));
}

.saltDropdown-primary {
  --dropdown-background: var(--salt-editable-primary-background);
  --dropdown-background-active: var(--salt-editable-primary-background-active);
  --dropdown-background-hover: var(--salt-editable-primary-background-hover);
  --dropdown-background-disabled: var(--salt-editable-primary-background-disabled);
  --dropdown-background-readonly: var(--salt-editable-primary-background-readonly);
  --dropdown-borderColor: var(--salt-editable-borderColor);
  --dropdown-borderColor-active: var(--salt-editable-borderColor-active);
  --dropdown-borderColor-hover: var(--salt-editable-borderColor-hover);
  --dropdown-outlineColor: var(--salt-focused-outlineColor);
}

.saltDropdown-secondary {
  --dropdown-background: var(--salt-editable-secondary-background);
  --dropdown-background-active: var(--salt-editable-secondary-background-active);
  --dropdown-background-hover: var(--salt-editable-secondary-background-active);
  --dropdown-background-disabled: var(--salt-editable-secondary-background-disabled);
  --dropdown-background-readonly: var(--salt-editable-secondary-background-readonly);
  --dropdown-borderColor: var(--salt-editable-borderColor);
  --dropdown-borderColor-active: var(--salt-editable-borderColor-active);
  --dropdown-borderColor-hover: var(--salt-editable-borderColor-hover);
  --dropdown-outlineColor: var(--salt-focused-outlineColor);
}

.saltDropdown-error {
  --dropdown-background: var(--salt-status-error-background);
  --dropdown-background-active: var(--salt-status-error-background);
  --dropdown-background-hover: var(--salt-status-error-background);
  --dropdown-background-readonly: var(--salt-status-error-background);
  --dropdown-borderColor: var(--salt-status-error-borderColor);
  --dropdown-borderColor-active: var(--salt-status-error-borderColor);
  --dropdown-borderColor-hover: var(--salt-status-error-borderColor);
  --dropdown-outlineColor: var(--salt-status-error-borderColor);
}

.saltDropdown-warning {
  --dropdown-background: var(--salt-status-warning-background);
  --dropdown-background-active: var(--salt-status-warning-background);
  --dropdown-background-hover: var(--salt-status-warning-background);
  --dropdown-background-readonly: var(--salt-status-warning-background);
  --dropdown-borderColor: var(--salt-status-warning-borderColor);
  --dropdown-borderColor-active: var(--salt-status-warning-borderColor);
  --dropdown-borderColor-hover: var(--salt-status-warning-borderColor);
  --dropdown-outlineColor: var(--salt-status-warning-borderColor);
}

.saltDropdown-success {
  --dropdown-background: var(--salt-status-success-background);
  --dropdown-background-active: var(--salt-status-success-background);
  --dropdown-background-hover: var(--salt-status-success-background);
  --dropdown-background-readonly: var(--salt-status-success-background);
  --dropdown-borderColor: var(--salt-status-success-borderColor);
  --dropdown-borderColor-active: var(--salt-status-success-borderColor);
  --dropdown-borderColor-hover: var(--salt-status-success-borderColor);
  --dropdown-outlineColor: var(--salt-status-success-borderColor);
}

.saltDropdown:focus,
.saltDropdown:focus:hover {
  background: var(--dropdown-background-active);
  cursor: var(--salt-selectable-cursor-hover);
  outline: var(--salt-focused-outlineWidth) var(--salt-focused-outlineStyle) var(--dropdown-outlineColor);
}

.saltDropdown.saltDropdown[aria-readonly="true"] {
  background: var(--dropdown-background-readonly);
  cursor: var(--salt-selectable-cursor-readonly);
}

.saltDropdown.saltDropdown:disabled,
.saltDropdown.saltDropdown:disabled:hover {
  background: var(--dropdown-background-disabled);
  cursor: var(--salt-selectable-cursor-disabled);
  color: var(--salt-content-primary-foreground-disabled);
}

.saltDropdown-content {
  flex: 1;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  text-wrap: nowrap;
}

.saltDropdown-placeholder {
  color: var(--salt-content-secondary-foreground);
  font-weight: var(--salt-text-fontWeight-small);
}

